--- a/src/App.css
+++ b/src/App.css
@@ -24,9 +24,9 @@
   color: white;
 }
 
-.App-link {
+/* .App-link {
   color: #61dafb;
-}
+} */
 
 @keyframes App-logo-spin {
   from {
@@ -39,4 +39,12 @@
 
 .logo-size {
   height: 2rem;
+}
+
+.search-value-helper {
+  color: red;
+}
+
+.search-value-min-len {
+  color: blue;
 }
